--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "Enhance GoWatch Design",
+      "name": "gowatch-server",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
