--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2"
   },
